--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html{
 .container{
     width: 1440px;
     margin: 0 auto;
+    
 }
 .main-header .container{
     display: flex;
@@ -78,6 +79,7 @@ body{
 }
 .main{
     padding-top: 80px;
+    overflow: hidden;
 }
 .main-title{
 
@@ -200,3 +202,17 @@ body{
     background: #A29BFE;
     border-radius: 20px;
 }
+/* .button-main-header{
+    width: 138px;
+    height: 48px;
+    padding: 16px 8px 16px 8px;
+
+   
+
+    text-shadow: 0px 2px 4px rgba(38, 50, 56, 0.16), 0px 4px 8px rgba(38, 50, 56, 0.08);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    background: #2D3436;
+    border-radius: 999px;
+} */
