--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ body{
     display:flex;
 }
 .main-two-col{
-    display: flex;
+    display:flex;
 }
 .left-article-description{
     width: 270px;
@@ -388,17 +388,79 @@ body{
 .active-tarriff:hover{
     filter: drop-shadow(0px 8px 8px rgba(38, 50, 56, 0.12)) drop-shadow(0px 16px 24px rgba(38, 50, 56, 0.08));
 }
-/* .button-main-header{
-    width: 138px;
-    height: 48px;
-    padding: 16px 8px 16px 8px;
+.section-3{
+    display: flex;
+    justify-content: center;
+}
+.sales-growth{
+    display: flex;
+    align-items: center;
+    
 
    
+}
+.support-calum{
+    width: 370px;
+    height: 536px;
+    justify-content:baseline;
+    
 
-    text-shadow: 0px 2px 4px rgba(38, 50, 56, 0.16), 0px 4px 8px rgba(38, 50, 56, 0.08);
+    padding: 32px;
+    margin-right: 30px;
+    box-sizing: border-box;
+   
+    
+    
+}
+  
+
+
+.button-one-col-tarif{
+    display: inline-block;
+    width: 306px;
+    height: 64px;
+
+    padding: 16px 8px 16px 8px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 32px;
+  
+    color: #6C5CE7;
+    background: rgb(255, 255, 255);
+    border: 1px solid  #c2c1c4;
+    border-radius: 15px;
+
+}
+.button-two-col-tarif{
+    display: inline-block;
+    width: 306px;
+    height: 64px;
+
+    padding: 16px 8px 16px 8px;
+
+    border: 0px;
+    border-radius: 15px;
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
-    background: #2D3436;
-    border-radius: 999px;
-} */
+    letter-spacing: -0.5px;
+    color: #ffffff;
+    background: #6C5CE7;
+}.button-theree-col-tarif{
+    display: inline-block;
+    width: 306px;
+    height: 64px;
+
+    padding: 16px 8px 16px 8px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 32px;
+  
+    color: #6C5CE7;
+    background: rgb(255, 255, 255);
+    border: 1px solid  #c2c1c4;
+    border-radius: 15px;
+  
+}
+
+
