--- a/css/main.css
+++ b/css/main.css
@@ -36,9 +36,6 @@ html{
 .nav-item a:hover{
     color: black;
 }
-.button-main-header{
-    
-}
 .main-button{
     height: 64px;
     width: 170px;
@@ -462,5 +459,63 @@ body{
     border-radius: 15px;
   
 }
+.section-pricing{
+    padding-bottom: 125px;
+}
+.benefits-title{
+    margin-top: 80px;
+}
+.benefits-description{
 
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
 
+    color: #2D3436;
+}
+.four-column{
+    display: flex;
+}
+.support-column{
+    width: 270px;
+    height: 330px;
+
+    margin-right: 30px;
+}
+.support-column ul{
+    list-style: none;
+}
+.tityle-suport{
+
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #2D3436;
+}
+.support-icon{
+    display: inline-block;
+
+    width: 70px;
+    height: 70px;
+
+    border-radius: 50%;
+    background-color:#E84393;
+}
+.blue{
+    background-color: #0984E3;
+}
+.dark-pink{
+    background-color: #6C5CE7;
+}
+.green{
+    background-color: #00B894;
+}   
+.support-button{
+    width: 146px;
+    height: 48;
+
+    padding: 8px 16px 8px 16px;
+    border: 1px solid #ADADAD;
+    border-radius: 16px;
+}
