--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,7 @@ body{
     border-radius: 20px;
 }
 .main-block{
+   
     width: 470px;
     height: 380px;
     margin-right: 30px;
@@ -304,7 +305,8 @@ body{
 }
 .active-item:hover{
     color: #6C5CE7;
-    text-decoration:underline;
+    text-decoration:none;
+    border-bottom: solid 10px #FDCB6E;
 }
 .time-list{
     display: flex;
@@ -337,6 +339,7 @@ body{
     margin-right: 30px;
     box-sizing: border-box;
 }
+
 .tariff-plan ul{
     list-style: none;
 
@@ -420,6 +423,7 @@ body{
     width: 306px;
     height: 64px;
 
+    margin-top: 50px;
     padding: 16px 8px 16px 8px;
     font-weight: 700;
     font-size: 18px;
@@ -446,21 +450,20 @@ body{
     letter-spacing: -0.5px;
     color: #ffffff;
     background: #6C5CE7;
-}.button-theree-col-tarif{
+}
+.button-learn-more{
     display: inline-block;
-    width: 306px;
-    height: 64px;
+    width: 146px;
+    height: 48px;
 
-    padding: 16px 8px 16px 8px;
+ 
+    
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
-  
     color: #6C5CE7;
     background: rgb(255, 255, 255);
     border: 1px solid  #c2c1c4;
     border-radius: 15px;
-  
 }
-
 
